--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="index.html" />
     <meta name="robots" content="index, follow"/>
     <meta name="author" content="Rambabu Near">
-    <link rel="canonical" href="index.html" />
+    <link rel="canonical" href="https://teenpattihasrat.com" />
     <meta name="google-site-verification" content="Czz8U_ZZO7DeYgxDMQUYEue4W2VsnJIXVALY_SoUFPk" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
