--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teen Patti Hasrat</title>
-    <meta name="keyword" content="Teen Patti Hasrat, hasrat, teen patti, teen patti hasrat Apk Download, hasrat teen patti Download, 3 patti hasrat">
+    <meta name="keywords" content="Teen Patti Hasrat, hasrat, teen patti, teen patti hasrat Apk Download, hasrat teen patti Download, 3 patti hasrat">
 	<meta name="description" content="Earn money by playing games at home with Teen Patti hasrat App. If you are bored alone somewhere, you can use the hasrat Teen Patti app for entertainment.">
     <link rel="shortcut icon" href="imgs/teen-patti-hasrat-apk-logo.ico" type="image/x-icon">
     <meta name="og:name" content="Teen Patti Hasrat"/>
