--- a/index.html
+++ b/index.html
@@ -20,6 +20,45 @@
     <meta name="google-site-verification" content="0EJnw_GoqtTJFKgAXCVyEVbD2erNM7bs9ODEsVYW3r4" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
+    <script type="application/ld+json">
+        {
+          "@context" : "https://schema.org",
+          "@type" : "WebSite",
+          "name" : "Teen Patti Hasrat",
+          "alternateName": ["3Patti Hasrat", "3 Patti Hasrat", "Teen Patti Hasrat App",],
+          "url" : "https://teenpattihasrat.com/"
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+            @context": "https://schema.org",
+            "@type": "Organization",
+            "url": "https://teenpattihasrat.com",
+            "logo": "https://teenpattihasrat.com/imgs/teen-patti-hasrat-apk-logo.webp",
+            "foundingDate": "2022",
+            "founders": [{"@type": "Person","name": "Pawan Kumar"},{"@type": "Person","name": "Chau Lee"}],
+            "sameAs": ["https://teenpattihasrat.in","https://www.youtube.com/@Teen-patti./"]
+        }
+    </script>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "SoftwareApplication",
+          "name": "Teen Patti Badshah",
+          "operatingSystem": "ANDROID",
+          "applicationCategory": "GameApplication",
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "ratingCount": "4564"
+          },
+          "offers": {
+            "@type": "Offer",
+            "price": "00",
+            "priceCurrency": "INR"
+          }
+        }
+    </script>
 </head>
 <body>
     <div class="warp">
