--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
           "@context" : "https://schema.org",
           "@type" : "WebSite",
           "name" : "Teen Patti Hasrat",
-          "alternateName": ["3Patti Hasrat", "3 Patti Hasrat", "Teen Patti Hasrat App",],
+          "alternateName": ["3Patti Hasrat", "3 Patti Hasrat", "Teen Patti Hasrat App"],
           "url" : "https://teenpattihasrat.com/"
         }
     </script>
     <script type="application/ld+json">
         {
-            @context": "https://schema.org",
+            "@context": "https://schema.org",
             "@type": "Organization",
             "url": "https://teenpattihasrat.com",
             "logo": "https://teenpattihasrat.com/imgs/teen-patti-hasrat-apk-logo.webp",
